--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="off.css" />
-    <title>Mel17</title>
+    <title>Game</title>
   </head>
   <body>
     <audio src="" id="mscFondo" autoplay loop></audio>
